# catflow-service-detector

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
catflow_service_detector/: worker.py
tests/: test_handler.py  test_import.py  test_unit.py
